--- a/src/components/AuthPage.css
+++ b/src/components/AuthPage.css
@@ -1,21 +1,26 @@
 /* AuthPages.css */
 
 .auth-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  .auth-form {
-    background: #f4f4f4;
-    padding: 50px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    height: 50%;
-    width: 30%;
-  }
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-image: url('./R.jpeg'); /* Replace 'path_to_image' with the actual path to your image */
+  background-size: cover;
+  background-position: center;
+  background-color: rgba(255, 255, 255, 0.8); /* Add transparency to the background color */
+}
+
+.auth-form {
+  background: rgba(244, 244, 244, 0.9); /* Add transparency to the background color */
+  padding: 50px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  height: 50%;
+  width: 30%;
+  margin: 20px;
+}
+
   .auth-form h2 {
     text-align: center;
     margin-bottom: 30px;
@@ -36,7 +41,7 @@
   }
   
   .auth-form button {
-    background: #4caf50;
+    background: #2f7ee6;
     color: white;
     padding: 10px 15px;
     border: none;
@@ -45,6 +50,6 @@
   }
   
   .auth-form button:hover {
-    background: #45a049;
+    background: #1f85f1;
   }
   
